ingress/apache-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    author:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template: 
    metadata:
      name: apache-pod
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
...
