ingress/nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: nginx-deployment
   labels:
     author: yamuna
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
...
