ingress/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    author: yamuna
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      name: tomcat-pod
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomee
...
