ingress/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    author: yamuna
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: nginx
...
