ingress/tomcat-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  labels:
    author: yamuna
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: tomcat
...
