ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: google.tomcat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat-service
                port:
                  number: 80
    - host: google.apache.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port: 
                  number: 80
    - host: google.nginx.com
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
...
